<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.UserInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewName"
            app:layout_constraintStart_toEndOf="@+id/textViewName"
            app:layout_constraintTop_toTopOf="@+id/textViewName"
            tools:text="24 года" />

        <TextView
            android:id="@+id/textViewCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/company"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewUserCompany" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewCompany"
            app:layout_constraintTop_toTopOf="@+id/textViewUserMail" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewEmail"
            app:layout_constraintTop_toTopOf="@+id/textViewUserPhone" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewPhone"
            app:layout_constraintTop_toTopOf="@+id/textViewUserAddress" />

        <TextView
            android:id="@+id/textViewCoordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/coordinates"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewAddress"
            app:layout_constraintTop_toTopOf="@+id/textViewUserCoordinates" />

        <TextView
            android:id="@+id/textViewRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/registered"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewCoordinates"
            app:layout_constraintTop_toTopOf="@+id/textViewUserRegistration" />

        <TextView
            android:id="@+id/textViewEyeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/eye_color"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewRegistration"
            app:layout_constraintTop_toTopOf="@+id/imageViewEyeColor" />

        <TextView
            android:id="@+id/textViewFavouriteFruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/favourite_fruit"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewEyeColor"
            app:layout_constraintTop_toTopOf="@+id/imageViewFavouriteFruit" />

        <TextView
            android:id="@+id/textViewAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewRegistration"
            app:layout_constraintTop_toBottomOf="@+id/imageViewFavouriteFruit" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="textViewCompany,textViewEmail,textViewPhone,
            textViewAddress,textViewRegistration, textViewEyeColor, textViewFavouriteFruit"
            tools:layout_editor_absoluteX="395dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textViewUserCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            tools:text="BUGS ALL" />

        <TextView
            android:id="@+id/textViewUserMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewUserCompany"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserCompany"
            tools:text="aishavelasquez@bugsall.com" />

        <TextView
            android:id="@+id/textViewUserPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewUserMail"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserMail"
            tools:text="+1 (906) 447-2711" />

        <TextView
            android:id="@+id/textViewUserAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewUserPhone"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserPhone"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="176 Team Street, Durham, Connecticut, 3324" />

        <TextView
            android:id="@+id/textViewUserCoordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewUserAddress"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserAddress"
            tools:text="48.239663, -14.683704" />

        <TextView
            android:id="@+id/textViewUserRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewUserCoordinates"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserCoordinates"
            tools:text="09:26 14.02.2016" />

        <ImageView
            android:id="@+id/imageViewEyeColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/eye_color"
            app:layout_constraintStart_toStartOf="@+id/textViewUserRegistration"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserRegistration"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/ic_eye_color_blue"/>

        <ImageView
            android:id="@+id/imageViewFavouriteFruit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/favourite_fruit"
            app:layout_constraintStart_toStartOf="@+id/imageViewEyeColor"
            app:layout_constraintTop_toBottomOf="@+id/imageViewEyeColor"
            tools:src="@drawable/ic_fruit_banana" />

        <TextView
            android:id="@+id/textViewUserAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textViewAbout"
            app:layout_constraintTop_toBottomOf="@+id/textViewAbout"
            tools:text="@tools:sample/lorem/random"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>